--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>Blizzard Alpha</title>
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="icon" type="image/x-icon" href="assets/images/logo.jpg">
     </head>
     <body>
         
@@ -36,11 +35,11 @@
             <section>
                 <nav>
                    <div class="nav">
-                    <div class="navitem"><img src="assets/images/push.png" class="push" alt=""><img src="assets/images/setting.png" class="navicon" alt="setting icon"></div>
-                    <div class="navitem"><img src="assets/images/push.png" class="push" alt=""><img src="assets/images/news.png" class="navicon" alt="news icon"></div>
-                    <div class="navitem active"><img src="assets/images/push.png" class="push" alt=""> <img src="assets/images/home.png" class="navicon" alt="home icon"></div>
-                    <div class="navitem"><img src="assets/images/push.png" class="push" alt=""><img src="assets/images/wallpaper.png" class="navicon" alt="wallpaper icon"></div>
-                    <div class="navitem"><img src="assets/images/push.png" class="push" alt=""><img src="assets/images/pfp.png" class="navicon" alt="profile pic icon"></div>   
+                    <div class="navitem" id="tosettings"> <label for="tosettings">Settings</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/setting.png" class="navicon" alt="setting icon"></div>
+                    <div class="navitem" id="tonews"> <label for="tonews">News</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/news.png" class="navicon" alt="news icon"></div>
+                    <div class="navitem active" id="tohome"> <label for="tohome">Home</label> <img src="assets/images/push.png" class="push" alt=""> <img src="assets/images/home.png" class="navicon" alt="home icon"></div>
+                    <div class="navitem" id="towallpapers"> <label for="towallpapers">Wallpapers</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/wallpaper.png" class="navicon" alt="wallpaper icon"></div>
+                    <div class="navitem" id="topfps"> <label for="topfps">PFP</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/pfp.png" class="navicon" alt="profile pic icon"></div>   
                    </div>
                 </nav>
                 <div class="welcome">
@@ -58,5 +57,6 @@
             </section>
         </div>
         <script src="assets/js/vanilla-tilt.js"></script>
+        <script src="assets/js/nav.js"></script>
     </body>
 </html>
