--- a/index.html
+++ b/index.html
@@ -32,30 +32,134 @@
                     </div>
                 </div>
             </main>
-            <section>
-                <nav>
-                   <div class="nav">
-                    <div class="navitem" id="tosettings"> <label for="tosettings">Settings</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/setting.png" class="navicon" alt="setting icon"></div>
-                    <div class="navitem" id="tonews"> <label for="tonews">News</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/news.png" class="navicon" alt="news icon"></div>
-                    <div class="navitem active" id="tohome"> <label for="tohome">Home</label> <img src="assets/images/push.png" class="push" alt=""> <img src="assets/images/home.png" class="navicon" alt="home icon"></div>
-                    <div class="navitem" id="towallpapers"> <label for="towallpapers">Wallpapers</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/wallpaper.png" class="navicon" alt="wallpaper icon"></div>
-                    <div class="navitem" id="topfps"> <label for="topfps">PFP</label> <img src="assets/images/push.png" class="push" alt=""><img src="assets/images/pfp.png" class="navicon" alt="profile pic icon"></div>   
+            <nav>
+                <div class="nav">
+
+                <a href="#home" class="navitem active">
+                    <div id="tohome">
+                        <label for="tohome">Home</label>
+                        <img src="assets/images/home.png" class="navicon" alt="home icon">
+                    </div>
+                </a>
+
+                <!-- <a href="#settings" class="navitem">
+                    <div  id="tosettings">
+                        <label for="tosettings">Settings</label> 
+                        <img src="assets/images/setting.png" class="navicon" alt="setting icon">
+                    </div>
+                </a> -->
+
+                <a href="#news" class="navitem">
+                    <div id="tonews">
+                        <label for="tonews">News</label>
+                        <!--img src="assets/images/push.png" class="push" alt=""-->
+                        <img src="assets/images/news.png" class="navicon" alt="news icon">
+                    </div>
+                </a>
+
+                <!-- <a href="#home" class="navitem active">
+                    <div id="tohome">
+                        <label for="tohome">Home</label>
+                        <img src="assets/images/home.png" class="navicon" alt="home icon">
+                    </div>
+                </a> -->
+
+                <a href="#wallpapers" class="navitem">
+                    <div id="towallpapers">
+                        <label for="towallpapers">Wallpapers</label>
+                        <!--img src="assets/images/push.png" class="push" alt=""-->
+                        <img src="assets/images/wallpaper.png" class="navicon" alt="wallpaper icon">
+                    </div>
+                </a>
+
+                <a href="#pfps" class="navitem">
+                    <div id="topfps">
+                        <label for="topfps">PFP</label>
+                        <!--img src="assets/images/push.png" class="push" alt=""-->
+                        <img src="assets/images/pfp.png" class="navicon" alt="profile pic icon">
+                    </div>
+                </a>
+
+                <a href="#settings" class="navitem">
+                    <div  id="tosettings">
+                        <label for="tosettings">Settings</label> 
+                        <img src="assets/images/setting.png" class="navicon" alt="setting icon">
+                    </div>
+                </a>
+
+                 <svg id="blob" class="blob" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 55 222" style="enable-background:new 0 0 55 222;" xml:space="preserve">
+           <path class="st0" d="M0,222.38V-0.38c0,0,1.95,41.37,29.74,65.28s25.05,46.96,25.05,46.96v-1.71c0,0,2.75,23.05-25.05,46.96
+           S0,222.38,0,222.38z"/>
+           </svg> 
+                </div>
+                <!-- <svg id="blob" class="blob" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 55 222" style="enable-background:new 0 0 55 222;" xml:space="preserve">
+           <path class="st0" d="M0,222.38V-0.38c0,0,1.95,41.37,29.74,65.28s25.05,46.96,25.05,46.96v-1.71c0,0,2.75,23.05-25.05,46.96
+           S0,222.38,0,222.38z"/>
+           </svg>  -->
+             </nav>
+            <section class="masterSection">
+                <section class="childSection home" id="home">
+                    <div class="welcome">
+                       <p>Welcome to "Blizzard Alpha," your ultimate destination for all things anime! Dive into a world of exclusive content featuring the latest Anime News, Manga and Manwha updates, chapters, and a plethora of Anime-related artwork and graphics design. Immerse yourself in the vibrant community, where we celebrate the passion for anime through engaging content, including Anime Memes and much more. Join us on this exciting journey as we bring the anime universe to life. Explore, connect, and stay tuned for a Blizzard of anime delights!</p>
                    </div>
-                </nav>
-                <div class="welcome">
-                    <p>Welcome to "Blizzard Alpha," your ultimate destination for all things anime! Dive into a world of exclusive content featuring the latest Anime News, Manga and Manwha updates, chapters, and a plethora of Anime-related artwork and graphics design. Immerse yourself in the vibrant community, where we celebrate the passion for anime through engaging content, including Anime Memes and much more. Join us on this exciting journey as we bring the anime universe to life. Explore, connect, and stay tuned for a Blizzard of anime delights!</p>
-                </div>
-                <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
-                <div class="socials">
-                    <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
-                    <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
-                    <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
-                </div>
-                <div class="photo">
-                    <img src="assets/images/photo.png" alt="">
-                </div>
+                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
+                    <div class="socials">
+                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
+                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
+                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
+                    </div>
+                    <div class="photo">
+                        <img src="assets/images/photo.png" alt="">
+                    </div>
+                </section>
+
+                <section class="childSection news" id="news">
+                    <div class="welcome">
+                        <p>NEWS / UPDATES</p>
+                   </div>
+                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
+                    <div class="socials">
+                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
+                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
+                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
+                    </div>
+                </section>
+
+                <section class="childSection wallpapers" id="wallpapers">
+                    <div class="welcome">
+                        <p>Wallpapers</p>
+                   </div>
+                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
+                    <div class="socials">
+                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
+                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
+                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
+                    </div>
+                </section>
+
+                <section class="childSection pfps" id="pfps">
+                    <div class="welcome">
+                        <p>Profile Photoes</p>
+                   </div>
+                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
+                    <div class="socials">
+                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
+                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
+                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
+                    </div>
+                </section>
+
+                <section class="childSection settings" id="settings">
+                    <div class="welcome">
+                        <p>Settings</p>
+                   </div>
+                </section>
             </section>
         </div>
+     
+
         <script src="assets/js/vanilla-tilt.js"></script>
         <script src="assets/js/nav.js"></script>
     </body>
