--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Blizzard Alpha</title>
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="icon" hred="assets/images/logo.jpg">
     </head>
     <body>
         
