--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         
         <div class="wrapper" data-tilt data-tilt-max="5">
             <div class="shapes">
-                <!-- <img src="assets/images/shapes.png" alt="bg shapes"> -->
                 <img src="assets/images/shape2.png" alt="bg shape triangle">
                 <img src="assets/images/shape1.png" alt="bg shape circle">
             </div>
@@ -43,40 +42,24 @@
                     </div>
                 </a>
 
-                <!-- <a href="#settings" class="navitem">
-                    <div  id="tosettings">
-                        <label for="tosettings">Settings</label> 
-                        <img src="assets/images/setting.png" class="navicon" alt="setting icon">
-                    </div>
-                </a> -->
 
                 <a href="#news" class="navitem">
                     <div id="tonews">
                         <label for="tonews">News</label>
-                        <!--img src="assets/images/push.png" class="push" alt=""-->
                         <img src="assets/images/news.png" class="navicon" alt="news icon">
                     </div>
                 </a>
 
-                <!-- <a href="#home" class="navitem active">
-                    <div id="tohome">
-                        <label for="tohome">Home</label>
-                        <img src="assets/images/home.png" class="navicon" alt="home icon">
-                    </div>
-                </a> -->
-
-                <a href="#wallpapers" class="navitem">
-                    <div id="towallpapers">
-                        <label for="towallpapers">Wallpapers</label>
-                        <!--img src="assets/images/push.png" class="push" alt=""-->
-                        <img src="assets/images/wallpaper.png" class="navicon" alt="wallpaper icon">
+                <a href="#groups" class="navitem">
+                    <div id="togroups">
+                        <label for="togroups">Groups</label>
+                        <img src="assets/images/group.png" class="navicon" alt="wallpaper icon">
                     </div>
                 </a>
 
                 <a href="#pfps" class="navitem">
                     <div id="topfps">
                         <label for="topfps">PFP</label>
-                        <!--img src="assets/images/push.png" class="push" alt=""-->
                         <img src="assets/images/pfp.png" class="navicon" alt="profile pic icon">
                     </div>
                 </a>
@@ -94,11 +77,7 @@
            S0,222.38,0,222.38z"/>
            </svg> 
                 </div>
-                <!-- <svg id="blob" class="blob" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 55 222" style="enable-background:new 0 0 55 222;" xml:space="preserve">
-           <path class="st0" d="M0,222.38V-0.38c0,0,1.95,41.37,29.74,65.28s25.05,46.96,25.05,46.96v-1.71c0,0,2.75,23.05-25.05,46.96
-           S0,222.38,0,222.38z"/>
-           </svg>  -->
+ 
              </nav>
             <section class="masterSection">
                 <section class="childSection home" id="home">
@@ -116,44 +95,39 @@
                     </div>
                 </section>
 
+                <div class="breaker"></div>
+
                 <section class="childSection news" id="news">
-                    <div class="welcome">
+                    <div class="contentArea">
                         <p>NEWS / UPDATES</p>
                    </div>
-                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
-                    <div class="socials">
-                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
-                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
-                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
-                    </div>
                 </section>
 
-                <section class="childSection wallpapers" id="wallpapers">
-                    <div class="welcome">
-                        <p>Wallpapers</p>
+                <div class="breaker"></div>
+
+                <section class="childSection groups" id="groups">
+                    <div class="contentArea">
+                        <h3 style="text-align: center; color:#f0f0f0; opacity: 1;">Whatsapp Groups</h3>
+                        <div class="groupsContainer">
+                            <div class="groupCard"><img src="assets/images/groups/1.jpg" alt="group icon"><p>❤️💎X̶̲̼̻̱̜̌̇̓̔̄̀̃͜͠-̶̢̭̟̜͉̰̲̰͖̉̇̾̂͜Ȁ̶̡̨̢̪̗̩̬̜n̸̟̊͂̔̄̀̉̐́̈͜͠ḭ̶͛͋͂̈͒̃̽̕̕͜͝m̶̠̩̿̊̓̈́̆͒̒̉̈́͌e̵̮͎̎̊ 💎❤️</p><a href="https://chat.whatsapp.com/H6XBPs8ftoqBo8zjORmiwH"><button>Join</button></a></div>
+                            <div class="groupCard"><img src="assets/images/groups/1.jpg" alt="group icon"><p>❤️💎X̶̲̼̻̱̜̌̇̓̔̄̀̃͜͠-̶̢̭̟̜͉̰̲̰͖̉̇̾̂͜Ȁ̶̡̨̢̪̗̩̬̜n̸̟̊͂̔̄̀̉̐́̈͜͠ḭ̶͛͋͂̈͒̃̽̕̕͜͝m̶̠̩̿̊̓̈́̆͒̒̉̈́͌e̵̮͎̎̊ 💎❤️</p><a href="https://chat.whatsapp.com/H6XBPs8ftoqBo8zjORmiwH"><button>Join</button></a></div>
+                            <div class="groupCard"><img src="assets/images/groups/1.jpg" alt="group icon"><p>❤️💎X̶̲̼̻̱̜̌̇̓̔̄̀̃͜͠-̶̢̭̟̜͉̰̲̰͖̉̇̾̂͜Ȁ̶̡̨̢̪̗̩̬̜n̸̟̊͂̔̄̀̉̐́̈͜͠ḭ̶͛͋͂̈͒̃̽̕̕͜͝m̶̠̩̿̊̓̈́̆͒̒̉̈́͌e̵̮͎̎̊ 💎❤️</p><a href="https://chat.whatsapp.com/H6XBPs8ftoqBo8zjORmiwH"><button>Join</button></a></div>
+                        </div>
                    </div>
-                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
-                    <div class="socials">
-                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
-                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
-                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
-                    </div>
                 </section>
+
+                <div class="breaker"></div>
 
                 <section class="childSection pfps" id="pfps">
-                    <div class="welcome">
+                    <div class="contentArea">
                         <p>Profile Photoes</p>
                    </div>
-                    <input type="email" name="subs" class="subscribe" placeholder="Subscribe to email updates">
-                    <div class="socials">
-                        <a href="https://web.facebook.com/profile.php?id=61552681987473" target="_blank"><img src="assets/images/fb.png" alt="facebook icon" ></a>
-                        <a href="https://www.instagram.com/blizzardalpha2023" target="_blank"><img src="assets/images/insta.png" alt="Instagram icon"></a>
-                        <a href="https://whatsapp.com/channel/0029VaISITj7IUYd8A3pu714" target="_blank"><img src="assets/images/wa.png" alt="whatsapp icon"></a>
-                    </div>
                 </section>
 
+                <div class="breaker"></div>
+
                 <section class="childSection settings" id="settings">
-                    <div class="welcome">
+                    <div class="contentArea">
                         <p>Settings</p>
                    </div>
                 </section>
